// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Slider RangeSliderDontTest smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.375rem;
}

.emotion-4 {
  height: 0.1875rem;
  border-radius: 4px;
  background: linear-gradient(to right, #b9cdfc 0%, #b9cdfc 0%, #175bf5 0%, #175bf5 100%, #b9cdfc 100%, #b9cdfc 100%);
  cursor: unset!important;
}

.emotion-6 {
  height: 1rem;
  width: 1rem;
  border-radius: 100px;
  background-color: #fff;
  border: 2px solid #175bf5;
  position: absolute;
  z-index: 0;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  box-sizing: border-box;
  cursor: unset!important;
}

.emotion-6::after {
  content: '';
  height: 1rem;
  width: 1rem;
  border: 8px solid transparent;
  border-radius: 100px;
  position: absolute;
  top: -0.625rem;
  left: -0.625rem;
  -webkit-transition: all 0.15s ease-in-out;
  -moz-transition: all 0.15s ease-in-out;
  -ms-transition: all 0.15s ease-in-out;
  -o-transition: all 0.15s ease-in-out;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.emotion-6:hover::after {
  border-color: rgba(14,14,23,0.1);
}

.emotion-8 {
  height: 1rem;
  width: 1rem;
  border-radius: 100px;
  background-color: #fff;
  border: 2px solid #175bf5;
  position: absolute;
  z-index: 1;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  box-sizing: border-box;
  cursor: unset!important;
}

.emotion-8::after {
  content: '';
  height: 1rem;
  width: 1rem;
  border: 8px solid transparent;
  border-radius: 100px;
  position: absolute;
  top: -0.625rem;
  left: -0.625rem;
  -webkit-transition: all 0.15s ease-in-out;
  -moz-transition: all 0.15s ease-in-out;
  -ms-transition: all 0.15s ease-in-out;
  -o-transition: all 0.15s ease-in-out;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.emotion-8:hover::after {
  border-color: rgba(14,14,23,0.1);
}

.emotion-10 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -0.4375rem;
  margin-right: -0.4375rem;
  gap: 1.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-12 {
  width: 5rem;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-14:hover {
  background-color: #F5F5FF;
}

.emotion-14:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-15 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
  color: #5f6c85;
}

.emotion-15>div {
  position: relative;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-17 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-17::-webkit-input-placeholder {
  color: transparent;
}

.emotion-17::-moz-placeholder {
  color: transparent;
}

.emotion-17:-ms-input-placeholder {
  color: transparent;
}

.emotion-17::placeholder {
  color: transparent;
}

.emotion-17:focus {
  outline: none;
}

.emotion-17:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-17:focus::-moz-placeholder {
  color: transparent;
}

.emotion-17:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-17:focus::placeholder {
  color: transparent;
}

.emotion-17:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-17:focus-within+label,
.emotion-17:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-17:focus-within+label {
  color: #1552DD;
}

.emotion-17:disabled {
  cursor: not-allowed;
}

.emotion-18 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, 0);
  -moz-transform: translate(0.1875rem, 0);
  -ms-transform: translate(0.1875rem, 0);
  transform: translate(0.1875rem, 0);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-19 {
  min-width: 2.75rem;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-26 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, -95%) scale(0.8);
  -moz-transform: translate(0.1875rem, -95%) scale(0.8);
  -ms-transform: translate(0.1875rem, -95%) scale(0.8);
  transform: translate(0.1875rem, -95%) scale(0.8);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="margin-left: 12px; width: 181px;"
        >
          <div
            class="emotion-2 emotion-3"
            data-testid="slider_component"
          >
            <div
              class="emotion-4 emotion-5"
              data-testid="track_component"
              style="transform: scale(1); cursor: inherit;"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="emotion-6 emotion-7"
                data-testid="thumb_0"
                draggable="false"
                role="slider"
                style="position: absolute; z-index: 0; cursor: grab; user-select: none; touch-action: none; transform: translate(-8px, -6.5px);"
                tabindex="0"
              />
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="100"
                class="emotion-8 emotion-7"
                data-testid="thumb_1"
                draggable="false"
                role="slider"
                style="position: absolute; z-index: 1; cursor: grab; user-select: none; touch-action: none; transform: translate(173px, -6.5px);"
                tabindex="0"
              />
            </div>
            <div
              class="emotion-10 emotion-11"
            >
              <div
                class="emotion-12 emotion-13"
              >
                <div>
                  <div
                    class="emotion-14"
                  >
                    <div
                      class="emotion-15"
                    >
                      <div
                        class="emotion-16"
                      >
                        <input
                          aria-invalid="false"
                          class="emotion-17"
                          data-testid="input"
                          id="textfield_1"
                          placeholder="Start"
                          value="0"
                        />
                        <label
                          class="emotion-18"
                          for="textfield_1"
                        >
                          Start 
                        </label>
                      </div>
                      <div
                        aria-hidden="false"
                        class="emotion-19"
                      >
                        %
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-12 emotion-13"
              >
                <div>
                  <div
                    class="emotion-14"
                  >
                    <div
                      class="emotion-15"
                    >
                      <div
                        class="emotion-16"
                      >
                        <input
                          aria-invalid="false"
                          class="emotion-17"
                          data-testid="input"
                          id="textfield_2"
                          placeholder="End"
                          value="100"
                        />
                        <label
                          class="emotion-26"
                          for="textfield_2"
                        >
                          End 
                        </label>
                      </div>
                      <div
                        aria-hidden="false"
                        class="emotion-19"
                      >
                        %
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Slider RangeSliderWithIncrementsDontTest smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.375rem;
}

.emotion-4 {
  height: 0.1875rem;
  border-radius: 4px;
  background: linear-gradient(to right, #b9cdfc 0%, #b9cdfc 0%, #175bf5 0%, #175bf5 100%, #b9cdfc 100%, #b9cdfc 100%);
  cursor: unset!important;
}

.emotion-6 {
  height: 0.4375rem;
  width: 0.4375rem;
  border-radius: 100%;
  background: #175bf5;
  position: relative;
  cursor: unset;
}

.emotion-6:hover {
  background: #1248c4;
}

.emotion-6:hover::before {
  content: '20%';
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.6875rem;
  background: black;
  position: absolute;
  padding: 0.5rem;
  box-sizing: border-box;
  top: -2.1875rem;
  left: -0.90625rem;
  width: 2.1875rem;
  height: 1.6875rem;
  border-radius: 2px;
}

.emotion-6:hover::after {
  content: ' ';
  display: -webkit-box;
  display: -webkit-unset;
  display: -ms-unsetbox;
  display: unset;
  position: absolute;
  top: -0.625rem;
  left: -0.15625rem;
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid #000;
}

.emotion-8::after {
  content: ' ';
  height: 0.4375rem;
  width: 0.4375rem;
  border: 4px solid transparent;
  border-radius: 100px;
  position: absolute;
  top: -0.25rem;
  left: -0.25rem;
}

.emotion-8:hover::after {
  border-color: rgba(14,14,23,0.1);
}

.emotion-10 {
  height: 0.4375rem;
  width: 0.4375rem;
  border-radius: 100%;
  background: #175bf5;
  position: relative;
  cursor: unset;
}

.emotion-10:hover {
  background: #1248c4;
}

.emotion-10:hover::before {
  content: '40%';
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.6875rem;
  background: black;
  position: absolute;
  padding: 0.5rem;
  box-sizing: border-box;
  top: -2.1875rem;
  left: -0.90625rem;
  width: 2.1875rem;
  height: 1.6875rem;
  border-radius: 2px;
}

.emotion-10:hover::after {
  content: ' ';
  display: -webkit-box;
  display: -webkit-unset;
  display: -ms-unsetbox;
  display: unset;
  position: absolute;
  top: -0.625rem;
  left: -0.15625rem;
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid #000;
}

.emotion-14 {
  height: 0.4375rem;
  width: 0.4375rem;
  border-radius: 100%;
  background: #175bf5;
  position: relative;
  cursor: unset;
}

.emotion-14:hover {
  background: #1248c4;
}

.emotion-14:hover::before {
  content: '60%';
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.6875rem;
  background: black;
  position: absolute;
  padding: 0.5rem;
  box-sizing: border-box;
  top: -2.1875rem;
  left: -0.90625rem;
  width: 2.1875rem;
  height: 1.6875rem;
  border-radius: 2px;
}

.emotion-14:hover::after {
  content: ' ';
  display: -webkit-box;
  display: -webkit-unset;
  display: -ms-unsetbox;
  display: unset;
  position: absolute;
  top: -0.625rem;
  left: -0.15625rem;
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid #000;
}

.emotion-18 {
  height: 0.4375rem;
  width: 0.4375rem;
  border-radius: 100%;
  background: #175bf5;
  position: relative;
  cursor: unset;
}

.emotion-18:hover {
  background: #1248c4;
}

.emotion-18:hover::before {
  content: '80%';
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.6875rem;
  background: black;
  position: absolute;
  padding: 0.5rem;
  box-sizing: border-box;
  top: -2.1875rem;
  left: -0.90625rem;
  width: 2.1875rem;
  height: 1.6875rem;
  border-radius: 2px;
}

.emotion-18:hover::after {
  content: ' ';
  display: -webkit-box;
  display: -webkit-unset;
  display: -ms-unsetbox;
  display: unset;
  position: absolute;
  top: -0.625rem;
  left: -0.15625rem;
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid #000;
}

.emotion-22 {
  height: 1rem;
  width: 1rem;
  border-radius: 100px;
  background-color: #fff;
  border: 2px solid #175bf5;
  position: absolute;
  z-index: 0;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  box-sizing: border-box;
  cursor: unset!important;
}

.emotion-22::after {
  content: '';
  height: 1rem;
  width: 1rem;
  border: 8px solid transparent;
  border-radius: 100px;
  position: absolute;
  top: -0.625rem;
  left: -0.625rem;
  -webkit-transition: all 0.15s ease-in-out;
  -moz-transition: all 0.15s ease-in-out;
  -ms-transition: all 0.15s ease-in-out;
  -o-transition: all 0.15s ease-in-out;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.emotion-22:hover::after {
  border-color: rgba(14,14,23,0.1);
}

.emotion-24 {
  height: 1rem;
  width: 1rem;
  border-radius: 100px;
  background-color: #fff;
  border: 2px solid #175bf5;
  position: absolute;
  z-index: 1;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  box-sizing: border-box;
  cursor: unset!important;
}

.emotion-24::after {
  content: '';
  height: 1rem;
  width: 1rem;
  border: 8px solid transparent;
  border-radius: 100px;
  position: absolute;
  top: -0.625rem;
  left: -0.625rem;
  -webkit-transition: all 0.15s ease-in-out;
  -moz-transition: all 0.15s ease-in-out;
  -ms-transition: all 0.15s ease-in-out;
  -o-transition: all 0.15s ease-in-out;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.emotion-24:hover::after {
  border-color: rgba(14,14,23,0.1);
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="margin-left: 12px; width: 181px;"
        >
          <div
            class="emotion-2 emotion-3"
            data-testid="slider_component"
          >
            <div
              class="emotion-4 emotion-5"
              data-testid="track_component"
              style="transform: scale(1); cursor: inherit;"
            >
              <div
                class="emotion-6 emotion-7"
                data-testid="mark_1"
                style="position: absolute; left: 33px; margin-top: -2px;"
              >
                <div
                  class="emotion-8 emotion-9"
                />
              </div>
              <div
                class="emotion-10 emotion-7"
                data-testid="mark_2"
                style="position: absolute; left: 69px; margin-top: -2px;"
              >
                <div
                  class="emotion-8 emotion-9"
                />
              </div>
              <div
                class="emotion-14 emotion-7"
                data-testid="mark_3"
                style="position: absolute; left: 105px; margin-top: -2px;"
              >
                <div
                  class="emotion-8 emotion-9"
                />
              </div>
              <div
                class="emotion-18 emotion-7"
                data-testid="mark_4"
                style="position: absolute; left: 141px; margin-top: -2px;"
              >
                <div
                  class="emotion-8 emotion-9"
                />
              </div>
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="emotion-22 emotion-23"
                data-testid="thumb_0"
                draggable="false"
                role="slider"
                style="position: absolute; z-index: 0; cursor: grab; user-select: none; touch-action: none; transform: translate(-8px, -6.5px);"
                tabindex="0"
              />
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="100"
                class="emotion-24 emotion-23"
                data-testid="thumb_1"
                draggable="false"
                role="slider"
                style="position: absolute; z-index: 1; cursor: grab; user-select: none; touch-action: none; transform: translate(173px, -6.5px);"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Slider SelectorSliderDontTest smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.375rem;
}

.emotion-4 {
  height: 0.1875rem;
  border-radius: 4px;
  background: linear-gradient(to right, #175bf5 0%, #175bf5 0%, #b9cdfc 0%, #b9cdfc 100%);
  cursor: unset!important;
}

.emotion-6 {
  height: 1rem;
  width: 1rem;
  border-radius: 100px;
  background-color: #fff;
  border: 2px solid #175bf5;
  position: absolute;
  z-index: 0;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  box-sizing: border-box;
  cursor: unset!important;
}

.emotion-6::after {
  content: '';
  height: 1rem;
  width: 1rem;
  border: 8px solid transparent;
  border-radius: 100px;
  position: absolute;
  top: -0.625rem;
  left: -0.625rem;
  -webkit-transition: all 0.15s ease-in-out;
  -moz-transition: all 0.15s ease-in-out;
  -ms-transition: all 0.15s ease-in-out;
  -o-transition: all 0.15s ease-in-out;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.emotion-6:hover::after {
  border-color: rgba(14,14,23,0.1);
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="margin-left: 12px; width: 181px;"
        >
          <div
            class="emotion-2 emotion-3"
            data-testid="slider_component"
          >
            <div
              class="emotion-4 emotion-5"
              data-testid="track_component"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="emotion-6 emotion-7"
                data-testid="thumb_0"
                draggable="false"
                role="slider"
                style="position: absolute; z-index: 0; cursor: grab; user-select: none; touch-action: none; transform: translate(-8px, -6.5px);"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;

exports[`Design System/Slider SelectorSliderWithIncrementsDontTest smoke-test 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.375rem;
}

.emotion-4 {
  height: 0.1875rem;
  border-radius: 4px;
  background: linear-gradient(to right, #175bf5 0%, #175bf5 0%, #b9cdfc 0%, #b9cdfc 100%);
  cursor: unset!important;
}

.emotion-6 {
  height: 0.4375rem;
  width: 0.4375rem;
  border-radius: 100%;
  background: #b9cdfc;
  position: relative;
  cursor: unset;
}

.emotion-6:hover {
  background: #1248c4;
}

.emotion-6:hover::before {
  content: '20%';
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.6875rem;
  background: black;
  position: absolute;
  padding: 0.5rem;
  box-sizing: border-box;
  top: -2.1875rem;
  left: -0.90625rem;
  width: 2.1875rem;
  height: 1.6875rem;
  border-radius: 2px;
}

.emotion-6:hover::after {
  content: ' ';
  display: -webkit-box;
  display: -webkit-unset;
  display: -ms-unsetbox;
  display: unset;
  position: absolute;
  top: -0.625rem;
  left: -0.15625rem;
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid #000;
}

.emotion-8::after {
  content: ' ';
  height: 0.4375rem;
  width: 0.4375rem;
  border: 4px solid transparent;
  border-radius: 100px;
  position: absolute;
  top: -0.25rem;
  left: -0.25rem;
}

.emotion-8:hover::after {
  border-color: rgba(14,14,23,0.1);
}

.emotion-10 {
  height: 0.4375rem;
  width: 0.4375rem;
  border-radius: 100%;
  background: #b9cdfc;
  position: relative;
  cursor: unset;
}

.emotion-10:hover {
  background: #1248c4;
}

.emotion-10:hover::before {
  content: '40%';
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.6875rem;
  background: black;
  position: absolute;
  padding: 0.5rem;
  box-sizing: border-box;
  top: -2.1875rem;
  left: -0.90625rem;
  width: 2.1875rem;
  height: 1.6875rem;
  border-radius: 2px;
}

.emotion-10:hover::after {
  content: ' ';
  display: -webkit-box;
  display: -webkit-unset;
  display: -ms-unsetbox;
  display: unset;
  position: absolute;
  top: -0.625rem;
  left: -0.15625rem;
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid #000;
}

.emotion-14 {
  height: 0.4375rem;
  width: 0.4375rem;
  border-radius: 100%;
  background: #b9cdfc;
  position: relative;
  cursor: unset;
}

.emotion-14:hover {
  background: #1248c4;
}

.emotion-14:hover::before {
  content: '60%';
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.6875rem;
  background: black;
  position: absolute;
  padding: 0.5rem;
  box-sizing: border-box;
  top: -2.1875rem;
  left: -0.90625rem;
  width: 2.1875rem;
  height: 1.6875rem;
  border-radius: 2px;
}

.emotion-14:hover::after {
  content: ' ';
  display: -webkit-box;
  display: -webkit-unset;
  display: -ms-unsetbox;
  display: unset;
  position: absolute;
  top: -0.625rem;
  left: -0.15625rem;
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid #000;
}

.emotion-18 {
  height: 0.4375rem;
  width: 0.4375rem;
  border-radius: 100%;
  background: #b9cdfc;
  position: relative;
  cursor: unset;
}

.emotion-18:hover {
  background: #1248c4;
}

.emotion-18:hover::before {
  content: '80%';
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.6875rem;
  background: black;
  position: absolute;
  padding: 0.5rem;
  box-sizing: border-box;
  top: -2.1875rem;
  left: -0.90625rem;
  width: 2.1875rem;
  height: 1.6875rem;
  border-radius: 2px;
}

.emotion-18:hover::after {
  content: ' ';
  display: -webkit-box;
  display: -webkit-unset;
  display: -ms-unsetbox;
  display: unset;
  position: absolute;
  top: -0.625rem;
  left: -0.15625rem;
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid #000;
}

.emotion-22 {
  height: 0.4375rem;
  width: 0.4375rem;
  border-radius: 100%;
  background: #b9cdfc;
  position: relative;
  cursor: unset;
}

.emotion-22:hover {
  background: #1248c4;
}

.emotion-22:hover::before {
  content: '100%';
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.6875rem;
  background: black;
  position: absolute;
  padding: 0.5rem;
  box-sizing: border-box;
  top: -2.1875rem;
  left: -0.90625rem;
  width: 2.1875rem;
  height: 1.6875rem;
  border-radius: 2px;
}

.emotion-22:hover::after {
  content: ' ';
  display: -webkit-box;
  display: -webkit-unset;
  display: -ms-unsetbox;
  display: unset;
  position: absolute;
  top: -0.625rem;
  left: -0.15625rem;
  width: 0;
  height: 0;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-top: 6px solid #000;
}

.emotion-26 {
  height: 1rem;
  width: 1rem;
  border-radius: 100px;
  background-color: #fff;
  border: 2px solid #175bf5;
  position: absolute;
  z-index: 0;
  cursor: -webkit-grab;
  cursor: grab;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  box-sizing: border-box;
  cursor: unset!important;
}

.emotion-26::after {
  content: '';
  height: 1rem;
  width: 1rem;
  border: 8px solid transparent;
  border-radius: 100px;
  position: absolute;
  top: -0.625rem;
  left: -0.625rem;
  -webkit-transition: all 0.15s ease-in-out;
  -moz-transition: all 0.15s ease-in-out;
  -ms-transition: all 0.15s ease-in-out;
  -o-transition: all 0.15s ease-in-out;
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.emotion-26:hover::after {
  border-color: rgba(14,14,23,0.1);
}

<html>
  <head />
  <body>
    <span
      class="emotion-0"
    >
      <span
        class="emotion-1"
      >
        <div
          style="margin-left: 12px; width: 181px;"
        >
          <div
            class="emotion-2 emotion-3"
            data-testid="slider_component"
          >
            <div
              class="emotion-4 emotion-5"
              data-testid="track_component"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="emotion-6 emotion-7"
                data-testid="mark_1"
                style="position: absolute; left: 33px; margin-top: -2px;"
              >
                <div
                  class="emotion-8 emotion-9"
                />
              </div>
              <div
                class="emotion-10 emotion-7"
                data-testid="mark_2"
                style="position: absolute; left: 69px; margin-top: -2px;"
              >
                <div
                  class="emotion-8 emotion-9"
                />
              </div>
              <div
                class="emotion-14 emotion-7"
                data-testid="mark_3"
                style="position: absolute; left: 105px; margin-top: -2px;"
              >
                <div
                  class="emotion-8 emotion-9"
                />
              </div>
              <div
                class="emotion-18 emotion-7"
                data-testid="mark_4"
                style="position: absolute; left: 141px; margin-top: -2px;"
              >
                <div
                  class="emotion-8 emotion-9"
                />
              </div>
              <div
                class="emotion-22 emotion-7"
                data-testid="mark_5"
                style="position: absolute; left: 178px; margin-top: -2px;"
              >
                <div
                  class="emotion-8 emotion-9"
                />
              </div>
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                aria-valuenow="0"
                class="emotion-26 emotion-27"
                data-testid="thumb_0"
                draggable="false"
                role="slider"
                style="position: absolute; z-index: 0; cursor: grab; user-select: none; touch-action: none; transform: translate(-8px, -6.5px);"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </span>
    </span>
  </body>
</html>
`;
